crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_for_nested.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
assertion_line: 397
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [],
}
