crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_implicit_return.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "add",
            ret_type: Some(
                I32,
            ),
            params: [
                LocalId(
                    0,
                ),
                LocalId(
                    1,
                ),
            ],
            locals: [
                Local {
                    name: Some(
                        "a",
                    ),
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: Some(
                        "b",
                    ),
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                2,
                            ),
                            value: Binary {
                                op: Add,
                                lhs: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                rhs: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                            },
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
