crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_logical_not.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: None,
            params: [],
            locals: [
                Local {
                    name: Some(
                        "a",
                    ),
                    ty: None,
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Bool,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: ConstBool(
                                true,
                            ),
                        },
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: Binary {
                                op: Eq,
                                lhs: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                rhs: Bool(
                                    false,
                                ),
                            },
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
