crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_logical_or.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: None,
            params: [],
            locals: [
                Local {
                    name: Some(
                        "a",
                    ),
                    ty: None,
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Bool,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: ConstBool(
                                false,
                            ),
                        },
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: Move(
                                LocalId(
                                    0,
                                ),
                            ),
                        },
                        If {
                            cond: Local(
                                LocalId(
                                    0,
                                ),
                            ),
                            then_bb: BlockId(
                                2,
                            ),
                            else_bb: BlockId(
                                1,
                            ),
                        },
                    ],
                },
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: ConstBool(
                                true,
                            ),
                        },
                        Goto(
                            BlockId(
                                2,
                            ),
                        ),
                    ],
                },
                MirBlock {
                    insts: [
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
