crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_modulo_ret.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: None,
            params: [],
            locals: [
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Binary {
                                op: Mod,
                                lhs: Int(
                                    10,
                                ),
                                rhs: Int(
                                    3,
                                ),
                            },
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
